fix(XmlChar): reduce pading and maring on small container

--- a/src/components/XmlChar/XmlChar.module.css
+++ b/src/components/XmlChar/XmlChar.module.css
@@ -39,8 +39,9 @@
 .containerSmall {
     display: inline-block;
     max-width: 350px;
-    margin: 1.5rem  0.25rem;
+    margin: 0.5rem  0.25rem;
     vertical-align: top;
+    padding: 0.5rem;
 }
 
 .header {
